Added 3D Visualizer Project and New Resume

--- a/Litec.html
+++ b/Litec.html
@@ -31,6 +31,7 @@
                     <li><a href="proj_frc.html">FIRST Robotics</a></li>
                     <li><a href="index.html">Personal Website</a></li>
                     <li><a href="Litec.html">EmbeddedControl</a></li>
+                    <li><a href="https://github.com/CSDTs/3D_Visualizer/tree/3D-Visualizer-iOS">3D Visualizer</a></li>
                 </ul>
             </li>
             <li><a href="Games.html">GAMES</a></li>
@@ -271,6 +272,7 @@
                         <li><a href="proj_frc.html">FIRST Robotics</a></li>
                         <li><a href="index.html">Personal Website</a></li>
                         <li><a href="Litec.html">Embedded Control</a></li>
+                        <li><a href="https://github.com/CSDTs/3D_Visualizer/tree/3D-Visualizer-iOS">3D Visualizer</a></li>
                     </div>
                 </ul>
             </div>
