--- a/Projects.html
+++ b/Projects.html
@@ -30,6 +30,7 @@
                     <li><a href="proj_frc.html">FIRST Robotics</a></li>
                     <li><a href="index.html">Personal Website</a></li>
                     <li><a href="Litec.html">EmbeddedControl</a></li>
+                    <li><a href="https://github.com/CSDTs/3D_Visualizer/tree/3D-Visualizer-iOS">3D Visualizer</a></li>
                 </ul>
             </li>
             <li><a href="Games.html">GAMES</a></li>
@@ -90,6 +91,11 @@
             <a href="Games.html">View project</a>
             <img src="Images/proj5.png">
         </div>
+        <div id="col1_item3" style="text-align: left">
+            <h2 style="color: white">3D Visualizer</h2>
+            <p>An app for viewing CAD models on iOS devices, with options to adjust lighting effects and execute animations.   </p>
+            <a style="color: whitesmoke" href="https://github.com/CSDTs/3D_Visualizer/tree/3D-Visualizer-iOS">View project</a>
+        </div>
     </div>
     <div id="col2">
         <div id="col2_item1" style="text-align: left">
@@ -139,6 +145,7 @@
                         <li><a href="proj_frc.html">FIRST Robotics</a></li>
                         <li><a href="index.html">Personal Website</a></li>
                         <li><a href="Litec.html">Embedded Control</a></li>
+                        <li><a href="https://github.com/CSDTs/3D_Visualizer/tree/3D-Visualizer-iOS">3D Visualizer</a></li>
                     </div>
                 </ul>
             </div>
