--- a/Resume.html
+++ b/Resume.html
@@ -91,7 +91,7 @@
 
 <div id="intro">
     <h1> Welcome to My Digital Resume</h1>
-    <a href="ResumeJan18.pdf">or visit the standard resume</a>
+    <a href="ResumeFeb18.pdf">or visit the standard resume</a>
 </div>
 
 <div id="quick_guide">
@@ -197,6 +197,16 @@
                     insurances to schedule trips to doctor's visits, using the MXIE software and a web app. <br/>
                     • Schedule transportation for patients in order to get them to the medical facilities safely.<br/>
                     • Gained exceptional communications skills as well as experiences in the service industry.
+                </h4>
+            </div>
+            <div id="ex5">
+                <h2>iOS AND MOBILE DEVELOPER</h2>
+                <h3>2018-PRESENT, RPI CSDT</h3>
+                <h4>
+                    • 	 Working as an undergraduate researcher to develop iOS apps for viewing 3D models in a
+                    classroom setting, using cutting-edge technologies involving Augmented Reality. <br/>
+                    •    Key areas of expertise include: UITableView, UICollectionView, SceneKit, Core Data, Core Motion,
+                    Xcode Interface Builder and Swift 4.
                 </h4>
             </div>
         </div>
