--- a/Games.html
+++ b/Games.html
@@ -37,6 +37,7 @@
                     <li><a href="proj_frc.html">FIRST Robotics</a></li>
                     <li><a href="index.html">Personal Website</a></li>
                     <li><a href="Litec.html">EmbeddedControl</a></li>
+                    <li><a href="https://github.com/CSDTs/3D_Visualizer/tree/3D-Visualizer-iOS">3D Visualizer</a></li>
                 </ul>
             </li>
             <li><a href="Games.html">GAMES</a></li>
@@ -131,6 +132,7 @@
                         <li><a href="proj_frc.html">FIRST Robotics</a></li>
                         <li><a href="index.html">Personal Website</a></li>
                         <li><a href="Litec.html">Embedded Control</a></li>
+                        <li><a href="https://github.com/CSDTs/3D_Visualizer/tree/3D-Visualizer-iOS">3D Visualizer</a></li>
                     </div>
                 </ul>
             </div>
