iOS Research Update

--- a/Projects.html
+++ b/Projects.html
@@ -87,14 +87,20 @@
         </div>
         <div id="col1_item2">
             <h2>2048 Game</h2>
-            <p>A reimagination of the popular 2048 mobile game, completely reverse-engineered from scratch using ReactJS. </p>
+            <p>A reimagination of the popular 2048 mobile game, completely reverse-engineered from scratch using ReactJS and the Model-View-Controller
+                (MVC) architectural pattern. </p>
             <a href="Games.html">View project</a>
             <img src="Images/proj5.png">
         </div>
         <div id="col1_item3" style="text-align: left">
             <h2 style="color: white">3D Visualizer</h2>
-            <p>An app for viewing CAD models on iOS devices, with options to adjust lighting effects and execute animations.   </p>
-            <a style="color: whitesmoke" href="https://github.com/CSDTs/3D_Visualizer/tree/3D-Visualizer-iOS">View project</a>
+            <p>An app for viewing CAD models on iOS devices, with options to adjust lighting effects, execute animations and
+                <strong>project models into the real world with Augmented Reality. </strong>  </p>
+            <p>
+                <a style="color: whitesmoke" href="https://github.com/CSDTs/3D_Visualizer/tree/3D-Visualizer-iOS">View project</a>
+                &nbsp • &nbsp
+                <a style="color: whitesmoke" href="http://jingweilirpi.blogspot.com/">View Research Blog</a>
+            </p>
         </div>
     </div>
     <div id="col2">
