Added Latest Experience & Resume in iOS

--- a/Resume.html
+++ b/Resume.html
@@ -91,7 +91,7 @@
 
 <div id="intro">
     <h1> Welcome to My Digital Resume</h1>
-    <a href="ResumeFeb18.pdf">or visit the standard resume</a>
+    <a href="ResumeMar18.pdf">or visit the standard resume</a>
 </div>
 
 <div id="quick_guide">
@@ -203,10 +203,19 @@
                 <h2>iOS AND MOBILE DEVELOPER</h2>
                 <h3>2018-PRESENT, RPI CSDT</h3>
                 <h4>
-                    • 	 Working as an undergraduate researcher to develop iOS apps for viewing 3D models in a
-                    classroom setting, using cutting-edge technologies involving Augmented Reality. <br/>
-                    •    Key areas of expertise include: UITableView, UICollectionView, SceneKit, Core Data, Core Motion,
-                    Xcode Interface Builder and Swift 4.
+                    • Working as an undergraduate researcher to develop iOS apps for viewing 3D models in a classroom
+                    setting, using cutting-edge technologies involving Augmented Reality. <br/>
+
+                    • Adopting core iOS frameworks such as SceneKit & Model I/O for 3D model viewing, and ARKit for
+                    the augmented reality experience. <br/>
+
+                    • Designing the UI and UX for the app from scratch. <br/>
+
+                    • Using CocoaPods to integrate third-party libraries into the app. For example, The app utilized Alamofire
+                    to fetch 3D models from the CSDT API. Fetched models are then visualized with AR. <br/>
+
+                    • Key areas of expertise include: UIKit, UITableView, UICollectionView, SceneKit, Core Data,
+                    Core Motion, Media Player, XIBs, CocoaPods, Xcode 9 and Swift 4. <br/>
                 </h4>
             </div>
         </div>
