Updated Skills Section in Resume -> May 18

--- a/Resume.html
+++ b/Resume.html
@@ -91,7 +91,7 @@
 
 <div id="intro">
     <h1> Welcome to My Digital Resume</h1>
-    <a href="ResumeMar18.pdf">or visit the standard resume</a>
+    <a href="ResumeMay18.pdf">or visit the standard resume</a>
 </div>
 
 <div id="quick_guide">
@@ -233,11 +233,11 @@
         </div>
         <div id="skill_slider">
             <ul class="bxslider">
-                <li><img src="Images/skl1.png"/></li>
-                <li><img src="Images/skl2.png"/></li>
+                <li><img src="Images/skl1_new.png"/></li>
+                <li><img src="Images/skl2_new.png"/></li>
                 <li><img src="Images/skl3x.png"/></li>
                 <li><img src="Images/skl4.png"/></li>
-                <li><img src="Images/skl5.png"/></li>
+                <li><img src="Images/skl5_new.png"/></li>
                 <li><img src="Images/skl6.png"/></li>
                 <li><img src="Images/skl7.png"/></li>
             </ul>
