--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
     <div id="intro">
         <h1>JING WEI LI</h1>
         <h2>Designer,</h2>
-        <h2>Programmer &</h2>
-        <h2>Computer Engineer.</h2>
+        <h2>Engineer &</h2>
+        <h2>Mobile Developer.</h2>
     </div>
 
     <div id="social_media">
