Updated w/ ModMed Experience & Resume

--- a/Resume.html
+++ b/Resume.html
@@ -91,7 +91,7 @@
 
 <div id="intro">
     <h1> Welcome to My Digital Resume</h1>
-    <a href="ResumeMay18.pdf">or visit the standard resume</a>
+    <a href="ResumeJune18.pdf">or visit the standard resume</a>
 </div>
 
 <div id="quick_guide">
@@ -175,7 +175,7 @@
             </div>
             <div id="ex2">
                 <h2>ELECTRONIC MANUFACTURING & AUTOCAD INTERN </h2>
-                <h3>2016, QUADLOGICS CONTROL CORP</h3>
+                <h3>SPRING 2016, QUADLOGICS CONTROL CORP</h3>
                 <h4>• Drafted 10+ AutoCAD schematics of complex electrical products to enable smooth production of
                     electronics.<br/>
                     • Verified 200+ service statuses of electrical products using TeraTerm in order to increase the
@@ -216,6 +216,23 @@
 
                     • Key areas of expertise include: UIKit, UITableView, UICollectionView, SceneKit, Core Data,
                     Core Motion, Media Player, XIBs, CocoaPods, Xcode 9 and Swift 4. <br/>
+                </h4>
+            </div>
+            <div id="ex6">
+                <h2>MOBILE SOFTWARE ENGINEERING INTERN</h2>
+                <h3>SUMMER 2018 @ MODERNIZING MEDICINE</h3>
+                <h4>
+                    • Working as an iOS developer to maintain Modernizing Medicine’s two apps, PocketEMA and Telehealth,
+                    with Swift and Objective-C. These apps directly improve the lives of more than 160 million patients. <br/>
+
+                    • Working with the MVVM design pattern using reactive programming techniques. <br/>
+
+                    • Collaborating closely with a Scrum team to facilitate software engineering in a team setting. <br/>
+
+                    • Issue tracking with JIRA & HTTP Debugging with Charles Proxy. <br/>
+
+                    • Technologies used: Swift, Objective-C, ReactiveKit, Bond, Carthage, Xcode, JetBrains AppCode,
+                    JIRA, BitBucket, Sourcetree, Charles Proxy. <br/>
                 </h4>
             </div>
         </div>
