Updated Homepage with Flickr Icon

--- a/index.html
+++ b/index.html
@@ -94,10 +94,12 @@
             <a id="sm2" target="_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="Images/linkedin.png"
                                                                                             width="50"
                                                                                             height="50"></a>
-            <a id="sm3" target="_blank" href="https://twitter.com/MrProLi"><img src="Images/twitter.png" width="50"
-                                                                                height="50"></a>
-            <a id="sm4" target="_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img
+            <!--<a id="sm3" target="_blank" href="https://twitter.com/MrProLi"><img src="Images/twitter.png" width="50"-->
+                                                                                <!--height="50"></a>-->
+            <a id="sm3" target="_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img
                     src="Images/yt.png" width="50" height="50"></a>
+            <a id="sm4" target="_blank" href="https://www.flickr.com/photos/154270674@N02/"><img src="Images/flickr-circle.png"
+                                                                                                 width="50" height="50"></a>
             <a id="sm5" target="_blank" href="https://github.com/ljw980105/"><img src="Images/github.png" width="50"
                                                                                   height="50"></a>
         </ul>
