--- a/Beatslytics.html
+++ b/Beatslytics.html
@@ -77,11 +77,17 @@
 
 <div id="title">
     <div class="center_img">
-        <img src="Images/Beatslytics/MusicAppIconTake2-1024%20copy.png" width="300px" height="300px">
+        <img id="beatslytics-logo" src="Images/Beatslytics/MusicAppIconTake2-1024%20copy.png" width="300px" height="300px">
     </div>
 
     <h1>Beatslytics</h1>
     <h2>An iOS App for Music Analytics and Discovery.</h2>
+    
+    <div class="center_img" style="padding-top: 2%">
+        <a href="https://itunes.apple.com/us/app/beatslytics/id1403202526?mt=8">
+            <img id="appStore" src="Images/Beatslytics/DownloadOnAppStore.png" width="169px" height="50px">
+        </a>
+    </div>
 
 </div>
 
