--- a/Projects.html
+++ b/Projects.html
@@ -115,6 +115,17 @@
             <p>A series of embedded systems projects engineered during Fall 2017 @ RPI, crafted from scratch using the C8051 Microcontroller.  </p>
             <a style="color: floralwhite" href="Litec.html">View project</a>
         </div>
+        <div id="col2_item3" style="text-align: left">
+            <h2 style="color: white">Beatslytics</h2>
+            <p>iOS App that allows user to see glorious analytics information about their music library.
+                <strong>Currently published on the App Store. </strong>
+            </p>
+            <p>
+                <a style="color: ivory" href="Beatslytics.html">View project</a>
+                &nbsp • &nbsp
+                <a style="color: ivory" href="https://itunes.apple.com/us/app/beatslytics/id1403202526?mt=8">Download on App Store</a>
+            </p>
+        </div>
     </div>
 </div>
 
