Site-wide Incorporation of Beatslytics

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <ul class="sub-menu">
                     <li><a href="Projects.html">All</a></li>
                     <li><a href="proj_frc.html">FIRST Robotics</a></li>
-                    <li><a href="index.html">Personal Website</a></li>
+                    <li><a href="Beatslytics.html">Beatslytics</a></li>
                     <li><a href="Litec.html">EmbeddedControl</a></li>
                     <li><a href="https://github.com/CSDTs/3D_Visualizer/tree/3D-Visualizer-iOS">3D Visualizer</a></li>
                 </ul>
@@ -110,7 +110,7 @@
     <div id="quad1">
         <div id="col0">
             <div id="yt">
-                <a href="Litec.html">EMBEDDED <br/>CONTROL</a>
+                <a href="Beatslytics.html">iOS App  <br/>Beatslytics</a>
             </div>
         </div>
         <div id="col1">
@@ -160,7 +160,7 @@
                         <li><a href="Projects.html">All Projects</a></li>
                         <li><a href="Games.html">2048 Game</a></li>
                         <li><a href="proj_frc.html">FIRST Robotics</a></li>
-                        <li><a href="index.html">Personal Website</a></li>
+                        <li><a href="Beatslytics.html">Beatslytics</a></li>
                         <li><a href="Litec.html">Embedded Control</a></li>
                         <li><a href="https://github.com/CSDTs/3D_Visualizer/tree/3D-Visualizer-iOS">3D Visualizer</a></li>
                     </div>
