--- a/proj_frc.html
+++ b/proj_frc.html
@@ -28,7 +28,7 @@
                 <ul class="sub-menu">
                     <li><a href="Projects.html">All</a></li>
                     <li><a href="proj_frc.html">FIRST Robotics</a></li>
-                    <li><a href="index.html">Personal Website</a></li>
+                    <li><a href="Beatslytics.html">Beatslytics</a></li>
                     <li><a href="Litec.html">EmbeddedControl</a></li>
                     <li><a href="https://github.com/CSDTs/3D_Visualizer/tree/3D-Visualizer-iOS">3D Visualizer</a></li>
                 </ul>
@@ -155,7 +155,7 @@
                         <li><a href="Projects.html">All Projects</a></li>
                         <li><a href="Games.html">2048 Game</a></li>
                         <li><a href="proj_frc.html">FIRST Robotics</a></li>
-                        <li><a href="index.html">Personal Website</a></li>
+                        <li><a href="Beatslytics.html">Beatslytics</a></li>
                         <li><a href="Litec.html">Embedded Control</a></li>
                         <li><a href="https://github.com/CSDTs/3D_Visualizer/tree/3D-Visualizer-iOS">3D Visualizer</a></li>
                     </div>
