Resume Incorporation of Beatslytics

--- a/Resume.html
+++ b/Resume.html
@@ -92,7 +92,7 @@
 
 <div id="intro">
     <h1> Welcome to My Digital Resume</h1>
-    <a href="ResumeJune18.pdf">or visit the standard resume</a>
+    <a href="Files/ResumeJul18.pdf">or visit the standard resume</a>
 </div>
 
 <div id="quick_guide">
@@ -234,6 +234,25 @@
 
                     • Technologies used: Swift, Objective-C, ReactiveKit, Bond, Carthage, Xcode, JetBrains AppCode,
                     JIRA, BitBucket, Sourcetree, Charles Proxy. <br/>
+                </h4>
+            </div>
+            <div id="ex7">
+                <h2>INDEPENDENT iOS DEVELOPER</h2>
+                <h3>2018 - PRESENT </h3>
+                <h4>
+                    • Designed, programmed and published an iOS App with an Apple Watch counterpart, Beatslytics, to the
+                    App Store. The app enables the user to rediscover their music with relevant analytics information about
+                    their music library. <br/>
+
+                    • Currently a registered Apple Developer Program member. <br/>
+
+                    • Designed & Implemented a database schema to store analytics information on device, using the
+                    CoreData persistence framework from Apple. <br/>
+
+                    • Developed a fully functional music player as a subset of features offered by Beatslytics,
+                    with the Media Player framework.  <br/>
+
+                    • Gained familiarity with using iTunes Connect to publish an app to the App Store. <br/>
                 </h4>
             </div>
         </div>
