--- a/Beatslytics.html
+++ b/Beatslytics.html
@@ -7,6 +7,7 @@
     <script src="JS/jquery.js"></script>
     <script src="JS/main2.js"></script>
     <meta charset="UTF-8">
+    <meta name="apple-itunes-app" content="app-id=1403202526"/>
     <title>Beatslytics</title>
     <link rel="icon" href="Images/icon png.png">
     <link href="Sass/beatslytics_styles.css" rel="stylesheet" type="text/css" media="screen">
