--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="JS/jquery.js"></script>
     <script src="JS/main2.js"></script>
     <meta charset="UTF-8">
+    <meta name="apple-itunes-app" content="app-id=1403202526"/>
     <title>Hi, I'm Li</title>
     <link rel="icon" href="Images/icon png.png">
     <link href="CSS/styles2.css" rel="stylesheet" type="text/css" media="screen">
