Updated to Aug 18 Resume

--- a/Resume.html
+++ b/Resume.html
@@ -92,7 +92,7 @@
 
 <div id="intro">
     <h1> Welcome to My Digital Resume</h1>
-    <a href="Files/ResumeJul18.pdf">or visit the standard resume</a>
+    <a href="Files/ResumeAug2018.pdf">or visit the standard resume</a>
 </div>
 
 <div id="quick_guide">
@@ -373,6 +373,7 @@
                         <li><a href="proj_frc.html">FIRST Robotics</a></li>
                         <li><a href="Beatslytics.html">Beatslytics</a></li>
                         <li><a href="Litec.html">Embedded Control</a></li>
+                        <li><a href="https://github.com/CSDTs/3D_Visualizer/tree/3D-Visualizer-iOS">3D Visualizer</a></li>
                     </div>
                 </ul>
             </div>
