--- a/Resume.html
+++ b/Resume.html
@@ -92,7 +92,7 @@
 
 <div id="intro">
     <h1> Welcome to My Digital Resume</h1>
-    <a href="Files/ResumeAug2018.pdf">or visit the standard resume</a>
+    <a href="Files/ResumeSept18.pdf">or visit the standard resume</a>
 </div>
 
 <div id="quick_guide">
@@ -223,17 +223,19 @@
                 <h2>MOBILE SOFTWARE ENGINEERING INTERN</h2>
                 <h3>SUMMER 2018 @ MODERNIZING MEDICINE</h3>
                 <h4>
-                    • Working as an iOS developer to maintain Modernizing Medicine’s two apps, PocketEMA and Telehealth,
-                    with Swift and Objective-C. These apps directly improve the lives of more than 160 million patients. <br/>
+                    • Worked as an iOS developer to maintain three apps from Modernizing Medicine: PocketEMA, Telehealth
+                    and Kiosk, with Swift and Objective-C. These apps directly improve the lives of more than 160 million patients. <br/>
 
-                    • Working with the MVVM design pattern using reactive programming techniques. <br/>
+                    Designed and implemented new features, new UI elements and carried out bug fixes while collaborating
+                    closely with a full-scale Scrum team.  <br/>
 
-                    • Collaborating closely with a Scrum team to facilitate software engineering in a team setting. <br/>
+                    • Implemented new features with major design patterns, such as MVC, MVVM with Reactive Programming,
+                    strategy, singleton and delegation patterns, in iOS. <br/>
 
-                    • Issue tracking with JIRA & HTTP Debugging with Charles Proxy. <br/>
+                    • Issue tracking with JIRA, networking w/ AFNetworking & HTTP Debugging with Charles Proxy. <br/>
 
                     • Technologies used: Swift, Objective-C, ReactiveKit, Bond, Carthage, Xcode, JetBrains AppCode,
-                    JIRA, BitBucket, Sourcetree, Charles Proxy. <br/>
+                    JIRA, BitBucket, Sourcetree, SonarQube and Charles Proxy. <br/>
                 </h4>
             </div>
             <div id="ex7">
