Added Fall 2018 Projects

--- a/Projects.html
+++ b/Projects.html
@@ -102,6 +102,13 @@
                 <a style="color: whitesmoke" href="http://jingweilirpi.blogspot.com/">View Research Blog</a>
             </p>
         </div>
+        <div id="col1_item4" style="text-align: left">
+            <h2 style="color: white">AutoDoorControl</h2>
+            <p>An open source app to help disabled students open and close accessible doors.
+            <p>
+                <a style="color: whitesmoke" href="https://github.com/AutomaticDoorControl/AutoDoorCtrl-iOS">View project</a>
+            </p>
+        </div>
     </div>
     <div id="col2">
         <div id="col2_item1" style="text-align: left">
@@ -117,7 +124,7 @@
         </div>
         <div id="col2_item3" style="text-align: left">
             <h2 style="color: white">Beatslytics</h2>
-            <p>iOS App that allows user to see glorious analytics information about their music library.
+            <p>iOS App that enables users to see glorious analytics information about their music library.
                 <strong>Currently published on the App Store. </strong>
             </p>
             <p>
@@ -125,6 +132,11 @@
                 &nbsp • &nbsp
                 <a style="color: ivory" href="https://itunes.apple.com/us/app/beatslytics/id1403202526?mt=8">Download on App Store</a>
             </p>
+        </div>
+        <div id="col2_item4" style="text-align: left">
+            <h2 style="color: white">Smart Desk</h2>
+            <p>A smart home appliance with customizable lights and an automated erasable whiteboard, plus an app to control it. IED Project, Fall 2018 @ RPI.  </p>
+            <a style="color: floralwhite" href="https://github.com/ljw980105/SmartDesk">View project</a>
         </div>
     </div>
 </div>
