--- a/proj_frc.html
+++ b/proj_frc.html
@@ -132,7 +132,7 @@
 
     <div id="footerx">
         <div id="personal_logo">
-            <img style="margin-top: 18px" src="Images/PersonalLogo.png">
+            <img style="margin-top: 18px" src="Images/PersonalLogoBlack.png">
         </div>
         <div id="section1">
             <div id="navigation">
