Changed Footer year to 2019 & Jan19 Resume

--- a/Resume.html
+++ b/Resume.html
@@ -92,7 +92,7 @@
 
 <div id="intro">
     <h1> Welcome to My Digital Resume</h1>
-    <a href="Files/ResumeSept18.pdf">or visit the standard resume</a>
+    <a href="Files/ResumeJan19.pdf">or visit the standard resume</a>
 </div>
 
 <div id="quick_guide">
@@ -414,7 +414,7 @@
         <img src="Images/PersonalLogo.png">
     </div>
 </div>
-<h4 id="standalone_footer" style="text-align: center; margin: 3% 5%"> &copy; JING WEI LI 2017-2018. Proudly Created from Scratch</h4>
+<h4 id="standalone_footer" style="text-align: center; margin: 3% 5%"> &copy; JING WEI LI 2017-2019. Proudly Created from Scratch</h4>
 
 </body>
 </html>
