Added CV & Fixed Resume Typo

--- a/Resume.html
+++ b/Resume.html
@@ -92,7 +92,11 @@
 
 <div id="intro">
     <h1> Welcome to My Digital Resume</h1>
-    <a href="Files/ResumeJan19.pdf">or visit the standard resume</a>
+    <p>
+        Or View The
+        <a href="Files/ResumeJan19.pdf"> 📝 Standard Resume</a>
+        <a href="Files/Curriculum%20Vitae.pdf">📜 CV</a>
+    <p>
 </div>
 
 <div id="quick_guide">
@@ -242,8 +246,8 @@
                 <h2>INDEPENDENT iOS DEVELOPER</h2>
                 <h3>2018 - PRESENT </h3>
                 <h4>
-                    • Designed, programmed and published an iOS App with an Apple Watch counterpart, Beatslytics, to the
-                    App Store. The app enables the user to rediscover their music with relevant analytics information about
+                    • Designed and programmed an iOS App with an Apple Watch counterpart, Beatslytics, and published it
+                    on the App Store. The app enables the user to rediscover their music with relevant analytics information about
                     their music library. <br/>
 
                     • Currently a registered Apple Developer Program member. <br/>
