Added experience and some tech stacks

--- a/AppFolio.html
+++ b/AppFolio.html
@@ -81,9 +81,9 @@
     <h1> <br/>  Apps I've Made<br/></h1>
 </div>
 
-<div id="apps">
+<div id="apps" class="dual_columns">
 
-    <div id="col1">
+    <div class="col1">
         <div id="app1" class="app">
             <img width="200px" height="200px" src="Images/AppFolio/BeatslyticsIcon.png">
             <h2>BEATSLYTICS</h2>
@@ -112,7 +112,7 @@
         </div>
     </div>
 
-    <div id="col2">
+    <div class="col2">
         <div id="app2" class="app">
             <img width="200px" height="200px" src="Images/AppFolio/SmartDeskIcon.png">
             <h2>SMARTDESK</h2>
@@ -125,10 +125,50 @@
         <div id="app4" class="app">
             <img width="200px" height="200px" src="Images/AppFolio/ADCIcon.png">
             <h2>AUTOMATIC DOOR CONTROL</h2>
-            <p>An open source iOS app that enables students with disability to open accessible doors.
+            <p>An open source qqiOS app that enables students with disability to open accessible doors.
             It uses BLE to communicate with hardware attached to the door to open it.</p>
             <p><strong>Frameworks: CoreBluetooth, Lottie & Alamofire</strong></p>
             <div style="text-align: center"><a href="https://github.com/AutomaticDoorControl/AutoDoorCtrl-iOS">View App ></a></div>
+        </div>
+    </div>
+</div>
+
+<h1 style="margin-top: -4%">Work Experience</h1>
+
+<div id="experience">
+    <div id="modmed" class="experience-style">
+        <img width="200px" height="200px" src="Images/AppFolio/ModMedIcon.png">
+        <div>
+            <h2> Mobile Software Engineering Intern</h2>
+            <h3> Summer 2018 @ Modernizing Medicine</h3>
+            <h4> Worked as an iOS developer to maintain three apps from Modernizing Medicine: PocketEMA, Telehealth and Kiosk,
+                with Swift and Objective-C. These apps directly improve the lives of more than 160 million patients.
+            </h4>
+            <h4> Designed and implemented new features, new UI elements and carried out bug fixes while collaborating
+                closely with a full-scale Scrum team.
+            </h4>
+        </div>
+    </div>
+</div>
+
+
+<h1 style="margin-top: 3%">Tech Stack</h1>
+
+<div id="teck_stack" class="dual_columns">
+    <div class="col1">
+        <div class="app">
+            <img width="300px" height="300px" src="Images/AppFolio/AppleTechIcon.png">
+            <h2>iOS Development</h2>
+            <p> I am a proficient iOS & watchOS developer, having made 5 apps and successfully completed an iOS internship.
+                I am also proficient in Xcode, Swift & Objective C. </p>
+        </div>
+    </div>
+    <div class="col2">
+        <div class="app">
+            <img width="300px" height="300px" src="Images/AppFolio/AndroidTechIcon.png">
+            <h2>Android Development</h2>
+            <p> While Android Development is not where my focus is, I do have a good understanding of making Android apps with
+            Java and Kotlin.</p>
         </div>
     </div>
 </div>
