Completed AppFolio for Desktop

--- a/AppFolio.html
+++ b/AppFolio.html
@@ -162,6 +162,24 @@
             <p> I am a proficient iOS & watchOS developer, having made 5 apps and successfully completed an iOS internship.
                 I am also proficient in Xcode, Swift & Objective C. </p>
         </div>
+        <div class="app">
+            <img width="200px" height="200px" src="Images/AppFolio/xdIcon.png">
+            <h2>UI / UX Design</h2>
+            <p> I'm both a designer and an engineer. As a graphic designer of the RPI Union, I have 2.5+ years of graphic design experience.
+            That leads to my ability in UI/UX design with Adobe XD. </p>
+        </div>
+        <div class="app">
+            <img width="200px" height="200px" src="Images/AppFolio/ARIcon.png">
+            <h2>Augmented Reality</h2>
+            <p> Through the production of the 3D Visualizer app, I've gained experience producing Augmented Reality applications
+                in iOS with the iOS framework ARKit and SceneKit. </p>
+        </div>
+        <div class="app">
+            <img width="200px" height="200px" src="Images/AppFolio/BluetoothIcon.png">
+            <h2>Bluetooth</h2>
+            <p> Through the production of the 3D Visualizer app, I've gained experience producing Augmented Reality applications
+                in iOS with the iOS framework ARKit and SceneKit. </p>
+        </div>
     </div>
     <div class="col2">
         <div class="app">
@@ -169,6 +187,24 @@
             <h2>Android Development</h2>
             <p> While Android Development is not where my focus is, I do have a good understanding of making Android apps with
             Java and Kotlin.</p>
+        </div>
+        <div class="app">
+            <img width="200px" height="200px" src="Images/AppFolio/RxIcon.png">
+            <h2>Reactive Programming</h2>
+            <p> After reading an RxSwift book by Ray Wenderlich, I gained knowledge in Reactive Programming, in the form of
+            RxSwift, and was able to apply this skill in building the S'more App.</p>
+        </div>
+        <div class="app">
+            <img width="200px" height="200px" src="Images/AppFolio/AlamofireIcon.png">
+            <h2>Networking</h2>
+            <p> I have experience in iOS Networking through the uses of frameworks including Alamofire and NSURLSession. With them,
+            I've produced apps that interact with the Internet via REST APIs.</p>
+        </div>
+        <div class="app">
+            <img width="200px" height="200px" src="Images/AppFolio/musicIcon.png">
+            <h2>Music Streaming</h2>
+            <p> I have experience in iOS Networking through the uses of frameworks including Alamofire and NSURLSession. With them,
+                I've produced apps that interact with the Internet via REST APIs.</p>
         </div>
     </div>
 </div>
