Started Adding Media Queries to AppFolio

--- a/AppFolio.html
+++ b/AppFolio.html
@@ -125,7 +125,7 @@
         <div id="app4" class="app">
             <img width="200px" height="200px" src="Images/AppFolio/ADCIcon.png">
             <h2>AUTOMATIC DOOR CONTROL</h2>
-            <p>An open source qqiOS app that enables students with disability to open accessible doors.
+            <p>An open source iOS app that enables students with disability to open accessible doors.
             It uses BLE to communicate with hardware attached to the door to open it.</p>
             <p><strong>Frameworks: CoreBluetooth, Lottie & Alamofire</strong></p>
             <div style="text-align: center"><a href="https://github.com/AutomaticDoorControl/AutoDoorCtrl-iOS">View App ></a></div>
